# Mars_Nav

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mars_rover_navigation/lib/mars_rover_navigation/: autonomous_navigator
install/mars_rover_navigation/share/mars_rover_navigation/: package.sh
install/mars_rover_navigation/share/mars_rover_navigation/cmake/: mars_rover_navigationConfig.cmake
install/mars_rover_navigation/share/mars_rover_navigation/config/: ros2_controller.yaml  waypoints_example.yaml
install/mars_rover_navigation/share/mars_rover_navigation/launch/: gz_simulation.py  realistic_mars_surface.py
install/mars_rover_navigation/share/mars_rover_navigation/urdf/: mars_rover.gazebo
log/: latest_build
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/mars_rover_navigation/: CMakeLists.txt
src/mars_rover_navigation/config/: nav2_params.yaml
src/mars_rover_navigation/launch/: gazebo_simulation.py  mars_rover_launch.py  mars_terrain_simulation.py  photorealistic_mars.py
src/mars_rover_navigation/maps/: mars_map.yaml
src/mars_rover_navigation/rviz/: mars_rover.rviz
src/mars_rover_navigation/script/: mars_rover_controller.py  mars_rover_system_test.py  navigation_monitor.py  terrain_analyzer.py
src/mars_rover_navigation/src/: autonomous_navigator.cpp  obstacle_detector.cpp  waypoint_navigator.cpp
src/mars_rover_navigation/urdf/: mars_rover.urdf.xacro  materials.xacro
src/mars_rover_navigation/world/: mars_terrain.world
src/mars_rover_navigation/worlds/: advanced_mars_terrain.sdf  mars_terrain.sdf  realistic_mars_surface.sdf  realistic_mars_terrain.sdf
(+4 files in other folders)
